
2008-10-17  Sancho Lerena <slerena@gmail.com>

	* fgraph.php, db_info.php, db_purge.php: Now show data also
	for string modules.

	* include/config_process.php, index.php: Header update for version
	2.1-dev.

2008-10-16  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* include/functions_html.php: Added print_error_message, a function
	that will print out <h3> error messages for you given a result

	* godmode/modules/manage_network_templates_form.php: Rewrite for new
	style and makes it easier for mass updates to templates (eg. if you
	have port 1-48 of a Cisco Switch (input, output and status) now you
	don't have to click 288 times.

2008-10-16  Sancho Lerena <slerena@gmail.com>

	* operation/snmpconsole/snmp_alert.php: Fixed problem creating 
	alerts, missing process_sql(). Default values now shown properly.

2008-10-16  Ramon Novoa  <rnovoa@artica.es>

	* godmode/modules/manage_network_components_form_wmi.php: Added
	  WMI namespace option.

	* godmode/modules/manage_network_components.php: Small fix.

2008-10-15  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* include/functions_db.php: Fix where the attachment wouldn't be
	deleted because of a variable problem

	* operation/snmpconsole/snmp_alert.php: Rewrite. Fixes bug #2166256

2008-10-15  Sancho Lerena <slerena@artica.es>

	* include/functions.php: Enterprise hook functions upgrade.

2008-10-15  Ramon Novoa  <rnovoa@artica.es>

	* godmode/agentes/module_manager_editor_network.php: Removed SNMP
	  version 3 support (was not complete). 

2008-10-14  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* reporting/fgraph.php: Fixed a bug that wouldn't render specific
	stats from data overview

2008-10-14  Sancho Lerena <slerena@artica.es>

	* include/config_process.php, index.php: Updated version.

	* include/functions_db.php: Small fix in a foreach() warning.

	* operation/agentes/estadisticas.php: Old, unused code removed.

2008-10-14  Evi Vanoost  <vanooste@rcbi.rochester.edu>
	